--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://www.martinsgiberts.com/favicon.png"/>
     <meta name="keywords" content="Martins Giberts">
     <meta name="description" content="Contact page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
