--- a/src/template.html
+++ b/src/template.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-    <link rel="shortcut icon" type="image/png" href="https://www.martinsgiberts.com/favicon.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#559fb4">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
     <meta name="keywords" content="Martins Giberts">
     <meta name="description" content="Contact page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
